--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 pandas = "^2.2.1"
 nltk = "^3.8.1"
 networkx = "^3.2.1"
+pydantic = "^2.6.3"
 
 
 [tool.poetry.group.dev.dependencies]
