--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^2.2.1"
 nltk = "^3.8.1"
 networkx = "^3.2.1"
 pydantic = "^2.6.3"
+scikit-learn = "^1.4.1.post1"
 
 
 [tool.poetry.group.dev.dependencies]
